[package]
build = "build.rs"
description = "this crate provides additional tools for working with datasets"
name = "concision-data"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["default"]
rustc-args = ["--cfg", "docsrs"]

[package.metadata.release]
no-dev-version = true
tag-name = "v{{version}}"

[lib]
bench = false
crate-type = ["lib"]
doc = true
doctest = true
test = true

[[test]]
name = "default"

[[test]]
name = "loader"
required-features = ["loader"]

[dependencies]
concision-core = { workspace = true }
# custom
variants = { workspace = true }
# data-structures
hashbrown = { optional = true, workspace = true }
# error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
# mathematics
approx = { optional = true, workspace = true }
ndarray = { workspace = true }
num-complex = { optional = true, workspace = true }
num-traits = { workspace = true }
# concurrency & parallelism
rayon = { optional = true, workspace = true }
# networking
reqwest = { optional = true, features = ["default"], workspace = true }
# data & serialization
serde = { optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# logging
tracing = { optional = true, workspace = true }
# WebAssembly
wasm-bindgen = { optional = true, workspace = true }

[features]
default = ["std"]

full = [
  "approx",
  "complex",
  "default",
  "json",
  "rand",
  "serde",
  "tracing",
]

nightly = [
  "concision-core/nightly",
]

# ************* [FF:Features] *************
loader = [
  "json",
  "reqwest",
]

# ************* [FF:Environments] *************
std = [
  "alloc",
  "anyhow/std",
  "concision-core/std",
  "hashbrown?/default",
  "ndarray/std",
  "num-complex?/std",
  "num-traits/std",
  "serde?/std",
  "serde_json?/std",
  "tracing?/std",
  "variants/std",
]

wasi = [
  "concision-core/wasi",
]

wasm = [
  "concision-core/wasm",
  "rayon?/web_spin_lock",
]

# ************* [FF:Dependencies] *************
alloc = [
  "concision-core/alloc",
  "hashbrown?/alloc",
  "serde?/alloc",
  "serde_json?/alloc",
  "variants/alloc",
]

approx = [
  "dep:approx",
  "concision-core/approx",
  "ndarray/approx",
]

blas = [
  "concision-core/blas",
  "ndarray/blas",
]

complex = [
  "dep:num-complex",
  "concision-core/complex",
]

hashbrown = [
  "dep:hashbrown", 
  "alloc"
]

json = [
  "alloc",
  "serde",
  "serde_json",
  "concision-core/json",
  "reqwest?/json",
]

rayon = [
  "dep:rayon",
  "concision-core/rayon",
  "hashbrown?/rayon",
]

rand = [
  "concision-core/rand",
  "rng",
]

rng = [
  "concision-core/rng",
]

reqwest = ["dep:reqwest"]

serde = [
  "dep:serde",
  "dep:serde_derive",
  "serde?/derive",
  "concision-core/serde",
  "hashbrown?/serde",
  "ndarray/serde",
  "num-complex?/serde",
]

serde_json = [
  "dep:serde_json",
  "concision-core/serde_json",
]

tracing = [
  "dep:tracing",
  "concision-core/tracing",
]

wasm_bindgen = [
  "dep:wasm-bindgen",
  "concision-core/wasm_bindgen",
]
