[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "concision-derive"
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true
test = false

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { features = ["full"], version = "1" }

[dev-dependencies.concision]
path = "../concision"
