[package]
build = "build.rs"
description = "custom derive macros for the concision framework"
name = "concision-derive"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["default"]
rustc-args = ["--cfg", "docsrs"]

[package.metadata.release]
no-dev-version = true
tag-name = "v{{version}}"

[lib]
bench = false
doc = true
doctest = true
proc-macro = true
test = false

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { features = ["full"], version = "2" }

[features]
default = []

nightly = [
  "proc-macro2/nightly",
]
