[package]
build       = "build.rs"
description = "this crate implements additional models using the concision framework"
name        = "concision-ext"

authors.workspace   = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[package.metadata.docs.rs]
all-features = false
features     = ["full"]
rustc-args   = ["--cfg", "docsrs"]
version      = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name       = "{{version}}"

[lib]
bench      = false
crate-type = ["cdylib", "rlib"]
doc        = true
doctest    = true
test       = true

[[example]]
name = "attention"
required-features = ["attention", "rand", "std"]

[[test]]
name = "attention"
required-features = ["approx", "attention", "rand", "std"]

[[test]]
name              = "snn"
required-features = ["approx", "snn", "std"]

[dependencies]
concision = { features = ["neural"], workspace = true }
# custom
variants = { workspace = true }
# concurrency & parallelism
rayon = { optional = true, workspace = true }
# data-structures
ndarray = { workspace = true }
# mathematics
approx      = { optional = true, workspace = true }
num         = { workspace = true }
num-complex = { optional = true, workspace = true }
num-traits  = { workspace = true }
rustfft     = { optional = true, workspace = true }
# serialization
serde        = { optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json   = { optional = true, workspace = true }
# logging
tracing = { optional = true, workspace = true }

[dev-dependencies]
anyhow             = { features = ["std"], workspace = true }
lazy_static        = { workspace = true }
tracing-subscriber = { features = ["std"], workspace = true }

[features]
default = ["attention", "std"]

full = [
  "complex",
  "default",
  "json",
  "rand",
  "serde",
  "tracing",
]

nightly = ["concision/nightly"]

# ************* [FF:Toggles] *************
json = ["alloc", "serde", "serde_json"]

signal = ["complex", "rustfft"]

# ********* [FF:Models] *********
models = [
  "attention",
  "cnn",
  "kan",
  "rnn",
  "s4",
  "snn",
  "transformer",
]

attention = []

cnn = []

kan = []

rnn = []

s4 = []

snn = []

transformer = []

# ************* [FF:Environments] *************
std = [
  "alloc",
  "approx?/std",
  "concision/std",
  "ndarray/std",
  "num-complex?/std",
  "num-traits/std",
  "num/std",
  "serde?/std",
  "serde_json?/std",
  "tracing?/std",
  "variants/std",
]

wasi = [
  "concision/wasi",
]

wasm = [
  "concision/wasm",
  "rayon?/web_spin_lock",
]
# ************* [FF:Dependencies] *************
alloc = [
  "concision/alloc",
  "num/alloc",
  "serde?/alloc",
  "serde_json?/alloc",
  "variants/alloc",
]

approx = ["concision/approx", "dep:approx", "ndarray/approx"]

blas = ["concision/blas", "ndarray/blas"]

complex = ["dep:num-complex"]

rand = ["concision/rand", "num-complex?/rand", "num/rand"]

rayon = ["concision/rayon", "ndarray/rayon"]

rng = ["concision/rng"]

rustfft = ["dep:rustfft"]

serde = [
  "concision/serde",
  "dep:serde",
  "dep:serde_derive",
  "ndarray/serde",
  "num-complex?/serde",
  "num/serde",
]

serde_json = ["dep:serde_json"]

tracing = ["concision/tracing", "dep:tracing"]
