[package]
build = "build.rs"
description = "this crate implements additional models using the concision framework"
name = "concision-ext"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]

[package.metadata.release]
no-dev-version = true
tag-name = "v{{version}}"

[lib]
bench = false

[[example]]
name = "attention"
required-features = ["attention", "rand", "std"]

[[example]]
name = "snn"
required-features = ["approx", "snn", "std"]

[dependencies]
concision = { features = ["macros"], workspace = true }
# custom
variants = { workspace = true }
# error handling
anyhow = { workspace = true }
# concurrency & parallelism
rayon = { optional = true, workspace = true }
# data-structures
ndarray = { workspace = true }
# mathematics
approx = { optional = true, workspace = true }
num = { workspace = true }
num-complex = { optional = true, workspace = true }
num-traits = { workspace = true }
rustfft = { optional = true, workspace = true }
# serialization
serde = { optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# logging
tracing = { optional = true, workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }
tracing-subscriber = { features = ["std"], workspace = true }

[features]
default = ["attention", "snn", "std"]

full = [
  "default",
  "approx",
  "complex",
  "json",
  "models",
  "rand",
  "serde",
  "tracing",
]

nightly = [
  "concision/nightly"
]

# ************* [FF:Toggles] *************
autodiff = ["concision/autodiff"]

rand = [
  "concision/rand",
  "num/rand",
  "num-complex?/rand",
]

json = [
  "alloc", 
  "serde", 
  "serde_json",
  "concision/json",
]

signal = ["complex", "rustfft"]

# ********* [FF:Models] *********
models = [
  "snn",
]

attention = []

snn = []

transformer = []

# ************* [FF:Environments] *************
std = [
  "alloc",
  "anyhow/std",
  "approx?/std",
  "concision/std",
  "ndarray/std",
  "num-complex?/std",
  "num-traits/std",
  "num/std",
  "serde?/std",
  "serde_json?/std",
  "tracing?/std",
  "variants/std",
]

wasi = [
  "concision/wasi"
]

wasm = [
  "wasm_bindgen",
  "concision/wasm",
  "rayon?/web_spin_lock",
]

# ********* [FF] Dependencies *********

alloc = [
  "concision/alloc",
  "num/alloc",
  "serde?/alloc",
  "serde_json?/alloc",
  "variants/alloc",
]

approx = [
  "dep:approx",
  "concision/approx",
  "ndarray/approx",
]

blas = ["concision/blas", "ndarray/blas"]

complex = [
  "dep:num-complex",
  "concision/complex",
]

rayon = [
  "concision/rayon", 
  "ndarray/rayon"
]

rustfft = ["dep:rustfft"]

serde = [
  "dep:serde",
  "dep:serde_derive",
  "concision/serde",
  "ndarray/serde",
  "num-complex?/serde",
  "num/serde",
]

serde_json = [
  "dep:serde_json",
  "concision/serde_json",
]

tracing = [
  "dep:tracing",
  "concision/tracing",
]

wasm_bindgen = [
  "concision/wasm_bindgen"
]