[package]
build = "build.rs"
description = "this crate provides various random distribution and initialization routines for the concision framework"
name = "concision-init"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["default"]
rustc-args = ["--cfg", "docsrs"]

[package.metadata.release]
no-dev-version = true
tag-name = "v{{version}}"

[lib]
bench = false
crate-type = ["lib"]
doctest = false
test = true

[[test]]
name = "distr"
required-features = ["rand", "std"]

[dependencies]
# data & serialization
serde = { features = ["derive"], optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
# error-handling
thiserror = { workspace = true }
# macros & utilities
paste = { workspace = true }
smart-default = { workspace = true }
strum = { workspace = true }
# mathematics
approx = { optional = true, workspace = true }
ndarray = { workspace = true }
num-complex = { optional = true, workspace = true }
num-traits = { workspace = true }
# random
getrandom = { default-features = false, optional = true, workspace = true }
rand = { optional = true, workspace = true }
rand_core = { optional = true, workspace = true }
rand_distr = { optional = true, workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }

[features]
default = ["rand", "std"]

full = [
  "default",
  "approx",
  "complex",
  "serde",
  "rand",
]

nightly = [
  "rand?/nightly",
]

# ************* [FF:Dependencies] *************
std = [
  "alloc",
  "ndarray/std",
  "num-complex?/std",
  "num-traits/std",
  "rand?/std",
  "rand?/std_rng",
  "rand_core?/std",
  "rand_distr?/std",
  "serde?/std",
  "strum/std",
  "thiserror/std",
]

wasi = []

wasm = ["getrandom?/wasm_js"]

# ************* [FF:Dependencies] *************

alloc = [
  "rand?/alloc",
  "rand_distr?/alloc",
  "serde?/alloc",
]

approx = [
  "dep:approx",
  "ndarray/approx",
]

blas = ["ndarray/blas"]

complex = ["dep:num-complex"]

rand = [
  "dep:rand",
  "dep:rand_distr",
  "num-complex?/rand",
  "rng",
]

rng = [
  "dep:getrandom",
  "rand?/os_rng",
  "rand?/small_rng",
  "rand?/thread_rng",
  "rand_core?/os_rng",
]

serde = [
  "dep:serde",
  "dep:serde_derive",
  "serde?/derive",
  "ndarray/serde",
  "num-complex?/serde",
  "rand?/serde",
  "rand_core?/serde",
  "rand_distr?/serde",
]
