[package]
build = "build.rs"
name = "concision-macros"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "std"
]

alloc = []

std = [
    "alloc"
]

[lib]
bench = false
proc-macro = true
test = false

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { features = ["full"], version = "2" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
