[package]
build = "build.rs"
name  = "concision-math"

authors.workspace     = true
categories.workspace  = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
readme.workspace      = true
repository.workspace  = true
version.workspace     = true

[features]
default = ["std"]

full = ["approx", "default", "serde", "tracing"]

# ********* [FF] Dependencies *********
alloc = []

approx = ["dep:approx", "ndarray/approx"]

blas = ["ndarray/blas"]

serde = [
    "dep:serde",
    "dep:serde_derive",
    "ndarray/serde",
    "num/serde",
]

tracing = ["dep:tracing"]

# ********* [FF] Environments *********
std = ["ndarray/std", "num/std", "serde/std", "strum/std"]

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = true
test       = true

[[test]]
name = "fft"
path = "tests/fft.rs"
required-features = ["approx", "std"]

[build-dependencies]

[dependencies]
# Shared dependencies
scsys.workspace          = true
ndarray.workspace        = true
num.workspace            = true
strum.workspace          = true
# Optional dependencies
approx       = { optional = true, version = "0.5" }
serde        = { default-features = false, optional = true, version = "1.0" }
serde_derive = { optional = true, version = "1.0" }
tracing      = { optional = true, version = "0.1" }

[dev-dependencies]
lazy_static.workspace = true
