[package]
name = "concision-models"
publish = false

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[features]
default = ["simple"]

full = [
    "default", 
    "models",
    "rand", 
    "serde", 
    "tracing"
]

models = [
    "simple", 
    "transformer"
]

simple = []

transformer = ["dep:concision-transformer"]

# ********* [FF] Dependencies *********
blas = [
    "concision-core/blas", 
    "concision-neural/blas", 
    "ndarray/blas",
    "concision-transformer?/blas",
]

rand = [
    "concision-core/rand", 
    "concision-neural/rand",
    "concision-transformer?/rand",
]

rayon = [
    "concision-core/rayon", 
    "concision-neural/rayon", 
    "ndarray/rayon",
    "concision-transformer?/rayon",
]

serde = [
    "concision-core/serde", 
    "concision-neural/serde",
    "concision-transformer?/serde",
]

tracing = [
    "concision-core/tracing", 
    "concision-neural/tracing", 
    "dep:tracing",
    "concision-transformer?/tracing",
]

[dependencies]
concision-core = { features = ["std"], workspace = true }
concision-neural = { workspace = true }

concision-transformer = { optional = true, path = "lib/transformer", version = "0.1.0" }

ndarray = { features = ["std"], workspace = true }
num-traits = { workspace = true }
tracing = { optional = true, version = "0.1" }

[dev-dependencies]
anyhow = "1"
lazy_static = "1"
tracing-subscriber = { features = ["std"], workspace = true }

# ********* Examples *********
[[example]]
name = "simple"
required-features = ["approx", "rand", "std", "tracing"]

[[test]]
name = "simple"
required-features = ["approx", "rand"]
