[package]
description = "this crate implements additional models using the concision framework"
name = "concision-models"
publish = false

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = [
    "--cfg",
    "docsrs",
]

[lib]
crate-type = [
    "cdylib",
    "rlib",
]
bench = false
doc = true
doctest = true
test = true

[dependencies]
concision-core = { features = ["std"], workspace = true }
concision-neural = { workspace = true }

concision-transformer = { optional = true, path = "lib/transformer", version = "0.1.0" }

approx = { optional = true, workspace = true }
ndarray = { features = ["std"], workspace = true }
num-traits = { workspace = true }
tracing = { optional = true, workspace = true }

[dev-dependencies]
anyhow = { features = ["std"], workspace = true }
lazy_static ={ workspace = true }
tracing-subscriber = { features = ["std"], workspace = true }

[features]
default = [
    "simple",
]

full = [
    "anyhow",
    "default", 
    "models",
    "rand", 
    "serde", 
    "tracing"
]

# ************* [FF:Features] *************
models = [
    "simple", 
    "transformer"
]

simple = []

transformer = ["dep:concision-transformer"]

# ************* [FF:Dependencies] *************
anyhow = [
    "concision-core/anyhow",
]

approx = [
    "dep:approx",
    "concision-core/approx", 
    "concision-neural/approx", 
    "ndarray/approx",
    "concision-transformer?/approx",
]

blas = [
    "concision-core/blas", 
    "concision-neural/blas", 
    "ndarray/blas",
    "concision-transformer?/blas",
]

rand = [
    "concision-core/rand", 
    "concision-neural/rand",
    "concision-transformer?/rand",
]

rayon = [
    "concision-core/rayon", 
    "concision-neural/rayon", 
    "ndarray/rayon",
    "concision-transformer?/rayon",
]

serde = [
    "concision-core/serde", 
    "concision-neural/serde",
    "concision-transformer?/serde",
]

tracing = [
    "concision-core/tracing", 
    "concision-neural/tracing", 
    "dep:tracing",
    "concision-transformer?/tracing",
]

# ************* [Examples] *************
[[example]]
name = "simple"
required-features = ["approx", "rand", "tracing"]

# ************* [FF:Dependencies] *************
[[test]]
name = "simple"
required-features = ["approx", "rand"]
